[tool.poetry]
name = "python_algo"
version = "0.1.0"
description = ""
authors = ["socraftio <socraftcontacts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.5.0"
pydantic = "^1.10.2"
black = {extras = ["jupyter"], version = "^22.10.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
